[package]
name = "counterdb"
version = "0.1.0"
authors = ["Pat Dignan <pdignan@hubspot.com>"]

[dependencies]
rocksdb = "0.6.0"
byteorder = "0.5"
grpc = { git = "https://github.com/stepancheg/grpc-rust" }
protobuf = { git = "http://github.com/stepancheg/rust-protobuf" }
futures         = "0.1"
futures-cpupool = "0.1"
zookeeper = "0.2"
regex = "0.1"
log = "0.3"
log4rs = "0.5.2"
uuid = { version = "0.3.1", features = [ "v4", "use_std" ] }
toml = "0.2"
clap = "~2.19.0"
